[package]
name = "totp-pam"
version = "0.1.0"
authors = ["Nir"]
edition = "2018"

[[bin]]
name = "pam-totp"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
getrandom = "~0.2.2"
structopt = "~0.3.21"
text_io = "0.1.8"
whoami = "1.1.0"
shellexpand = "2.1.0"
serde_yaml = "0.8"

[dependencies.totp-rs]
version = "~0.6"
features = ["qr", "serde_support"]